Move variables to .env

--- a/services/ui/chat/templates/chat/index.html
+++ b/services/ui/chat/templates/chat/index.html
@@ -37,7 +37,7 @@
             chatInput.value = '';
 
             // Send message to API and get response
-            fetch('http://127.0.0.1:8000/api/v1/chat/', { // This URL will need to be configured
+            fetch('{{ API_URL }}', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
